--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
         "primeflex": "^3.3.1",
-        "primeicons": "6.0.1",
+        "primeicons": "^6.0.1",
         "primeng": "17.2.0",
         "quill": "^1.3.7",
         "rxjs": "~7.8.1",
